# python-villages-events

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOW_TO_RUN.md  INSTALLATION_GUIDE.md  LICENSE_CHANGE_SUMMARY.md  MANIFEST.in  Makefile  PREAMBLE_FEATURE_SUMMARY.md  PREAMBLE_SEPARATOR_FIX.md  PREAMBLE_SEPARATOR_STATUS.md  PREAMBLE_SEPARATOR_UPDATE.md  PREAMBLE_USAGE_NOTES.md  PROJECT_STATUS.md  QUICK_TEST_GUIDE.md  README.md  REPOSITORY_SETUP.md  SEPARATOR_CLARIFICATION.md  SEPARATOR_FIX_SUMMARY.md  TASK_7_COMPLETE.md  VERSIONING_SETUP_COMPLETE.md  VERSION_BUMP_1.1.0.md  VERSION_FILE_FIX.md  config.yaml.example  pyproject.toml  renovate.json  requirements-dev.txt  setup.py  test_preamble_manual.py  test_separator_demo.sh  verify_separator.sh  villages-events  villages_events.py  villages_square_events.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.kiro/specs/python-event-scraper/: design.md  (+2 more)
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  QUICKSTART.md  QUICK_START.md  README.md  SETUP_SUMMARY.md  TESTING.md  VERSIONING.md
scripts/: add_gpl_headers.py  bump_version.py
src/: __init__.py  __main__.py  __version__.py  api_client.py  config.py  config_loader.py  event_processor.py  exceptions.py  output_formatter.py  session_manager.py  token_fetcher.py  villages_events.py
tests/: __init__.py  test_event_processor.py  test_integration.py  test_output_formatter.py  test_preamble.py  test_session_manager.py  test_token_fetcher.py
